fix: minor fixes to setup

--- a/example_computer_setup/computers/localhost.yaml
+++ b/example_computer_setup/computers/localhost.yaml
@@ -2,8 +2,8 @@
 description: "Local machine"
 label: "localhost"
 hostname: "localhost"
-transport: local
-scheduler: direct
+transport: core.local
+scheduler: core.direct
 work_dir: "/home/{username}/.aiida_run"
 mpirun_command: "mpirun -np {tot_num_mpiprocs}"
 mpiprocs_per_machine: "1"
