apply suggestions from code review

--- a/example_computer_setup/computers/my-cluster.yaml
+++ b/example_computer_setup/computers/my-cluster.yaml
@@ -13,4 +13,4 @@ append_text: " "
 # Extra properties
 extras:
    # note: will be autodetected if not specified
-   conda_dir: "/home/myuser/miniconda3"
+   conda_dir: "/home/{username}/miniconda3"
