--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,10 @@ keywords = aiida
 packages = find:
 python_requires = >=3.8,<4
 install_requires =
-    # XXX get specific aiida version
-    aiida-core@git+git://github.com/aiidateam/aiida_core@develop#egg=aiida-core
+    # TODO: Update dependency to Aiida 2.0, when it is released
+    # NOTE: This is a hack to ensure that we get a stable API from AiiDA while we depend on
+    #       unreleased features (https://github.com/aiidateam/aiida-core/pull/3787)
+    aiida-core@git+git://github.com/aiidateam/aiida-core@45238ebfa66d5361ebc4ca9de081eae77869708f#egg=aiida-core
     toolz
     cloudpickle
     numpy
