--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
     # TODO: Update dependency to Aiida 2.0, when it is released
     # NOTE: This is a hack to ensure that we get a stable API from AiiDA while we depend on
     #       unreleased features (https://github.com/aiidateam/aiida-core/pull/3787)
-    aiida-core@git+git://github.com/aiidateam/aiida-core@45238ebfa66d5361ebc4ca9de081eae77869708f#egg=aiida-core
+    aiida-core@git+https://github.com/aiidateam/aiida-core@45238ebfa66d5361ebc4ca9de081eae77869708f#egg=aiida-core
     toolz
     cloudpickle
     numpy
