Update aiida dependency to 2.0 beta release

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,7 @@ packages = find:
 python_requires = >=3.8,<4
 install_requires =
     # TODO: Update dependency to Aiida 2.0, when it is released
-    # NOTE: This is a hack to ensure that we get a stable API from AiiDA while we depend on
-    #       unreleased features (https://github.com/aiidateam/aiida-core/pull/3787)
-    aiida-core@git+https://github.com/aiidateam/aiida-core@45238ebfa66d5361ebc4ca9de081eae77869708f#egg=aiida-core
+    aiida-core==2.0.0b1
     toolz
     cloudpickle
     numpy
