--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,8 @@ repos:
     rev: 6.1.1
     hooks:
     -   id: pydocstyle
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.27.0
+    hooks:
+    -   id: pyupgrade
+        args: ["--py39-plus"]
