Update aiida core requirement to 2.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,7 @@ keywords = aiida
 packages = find:
 python_requires = >=3.8,<4
 install_requires =
-    # TODO: Update dependency to Aiida 2.0, when it is released
-    aiida-core==2.0.0b1
+    aiida-core>=2.0,<3
     toolz
     cloudpickle
     numpy
